@@ -81,7 +81,7 @@ class TestCliStarter
     @Test
     void testNoArguments(@SysErr final Capturable err)
     {
-        assertExitWithError(() -> runCliStarter(), ExitStatus.CLI_ERROR, "oft: Missing command",
+        assertExitWithError(this::runCliStarter, ExitStatus.CLI_ERROR, "oft: Missing command",
                 err);
     }
 
@@ -115,12 +115,8 @@ class TestCliStarter
             final Capturable out) throws MultipleFailuresError
     {
         out.capture();
-        assertAll(() -> {
-            assertExitWithStatus(ExitStatus.OK.getCode(), runnable);
-        }, () -> assertOutputFileExists(false), //
-                () -> {
-                    assertThat(out.getCapturedData(), startsWith(outputStart));
-                });
+        assertAll(() -> assertExitWithStatus(ExitStatus.OK.getCode(), runnable), () -> assertOutputFileExists(false), //
+                () -> assertThat(out.getCapturedData(), startsWith(outputStart)));
     }
 
     @Test
@@ -318,8 +314,8 @@ class TestCliStarter
         assertAll( //
                 () -> assertExitWithStatus(ExitStatus.OK.getCode(), runnable), //
                 () -> assertOutputFileExists(true), //
-                () -> assertOutputFileContainsOldMacNewlines(), //
-                () -> assertOutputFileContainsNoUnixNewlines() //
+                this::assertOutputFileContainsOldMacNewlines, //
+                this::assertOutputFileContainsNoUnixNewlines //
         );
     }
 
@@ -347,8 +343,8 @@ class TestCliStarter
         assertAll( //
                 () -> assertExitWithStatus(ExitStatus.OK.getCode(), runnable), //
                 () -> assertOutputFileExists(true), //
-                () -> assertPlatformNewlines(), //
-                () -> assertNoOffendingNewlines() //
+                this::assertPlatformNewlines, //
+                this::assertNoOffendingNewlines //
         );
     }
 
@@ -403,7 +399,7 @@ class TestCliStarter
         final Path file = this.outputFile;
         try
         {
-            return new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+            return Files.readString(file);
         }
         catch (final IOException exception)
         {
